@@ -514,7 +514,7 @@ private:
   /// Interface to effect shutdown of the process.
   ShutdownInterface* shutdown_;
 
-  ACE_Thread_Mutex lock_;
+  ACE_Recursive_Thread_Mutex lock_;
 };
 
 
